[package]
name = "markup5ever_rcdom"
version = "0.1.0"
authors = [ "The html5ever Project Developers" ]
license = "MIT / Apache-2.0"
repository = "https://github.com/servo/html5ever"
description = "Basic, unsupported DOM structure for use by tests in html5ever/xml5ever"
readme = "README.md"
documentation = "https://docs.rs/markup5ever_rcdom"
categories = [ "parser-implementations", "web-programming" ]
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
tendril       = { version=">=0.4.1,  <0.5" }
markup5ever   = { version=">=0.10.0, <0.11" }

[dev-dependencies]
xml5ever      = { version=">=0.16.1, <0.17" }
html5ever     = { version=">=0.25.0, <0.26" }
serde_json    = { version=">=1.0.38, <1.1" }
rustc-test    = { version=">=0.3.0,  <0.4" }

[[test]]
name = "html-tokenizer"
harness = false

[[test]]
name = "html-tree-builder"
harness = false

[[test]]
name = "xml-tree-builder"
harness = false

[[test]]
name = "xml-tokenizer"
harness = false
